# photosphere-cli

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/: pull_request_template.md
.github/workflows/: ci.yaml  release.yaml  rust.yaml
priv/: mix.exs
src/: lexer.rs  main.rs  parser.rs  photosphere.rs
src/lexer/: token.rs
src/parser/: ast.rs  lexer.rs  token.rs
src/parser/ast/: anon_call.rs  atom.rs  attribute.rs  boolean.rs  charlist.rs  hashmap.rs  list.rs  number.rs  string.rs  tuple.rs
src/parser/lexer/: token.rs
src/photosphere/: mod.rs  parser.rs  service.rs  setup.rs  str_utils.rs  validations.rs
src/photosphere/service/: de.rs  dep.rs  ser.rs
