[package]
name = "photosphere"
version = "0.2.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Zoey Pessanha <zoey.pessanha@solfacil.com.br>"]
description = "An easy way to start a service-template project"
readme = "README.md"
homepage = "https://github.com/solfacil/photosphere"
repository = "https://github.com/solfacil/photosphere"

[[bin]]
name = "photosphere"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.18", features = ["derive"] }
walkdir = "2.3.2"
