[package]
name = "photosphere"
version = "0.3.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Zoey Pessanha <zoey.pessanha@solfacil.com.br>"]
description = "An easy way to start a service-template project"
readme = "README.md"
homepage = "https://github.com/solfacil/photosphere"
repository = "https://github.com/solfacil/photosphere"
build = "src/build.rs"

[[bin]]
name = "photosphere"
path = "src/main.rs"

[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.18", features = ["derive"] }
lalrpop-util = "0.19.7"
regex = "1"
walkdir = "2.3.2"
